--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
+.center {
+  margin: auto;
+  width: 50%;
+  border: 3px solid green;
+  padding: 10px;
+}
 
 /* Style the top navigation bar */
 .topnav {
