--- a/style.css
+++ b/style.css
@@ -8,12 +8,13 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
 }
-.center {
-  margin: auto;
-  width: 50%;
-  border: 3px solid green;
-  padding: 10px;
-}
+
+P { text-align: center }
+H2 { text-align: center }
+IMG {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
 
 /* Style the top navigation bar */
 .topnav {
