--- a/style.css
+++ b/style.css
@@ -16,6 +16,11 @@ IMG {
     margin-left: auto;
     margin-right: auto }
 
+.responsive {
+  width: 100%;
+  height: auto;
+}
+
 .center {
   display: block;
   margin-left: auto;
