--- a/style.css
+++ b/style.css
@@ -9,8 +9,11 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+/*
 P { text-align: center }
 H2 { text-align: center }
+*/
+
 IMG {
     display: block;
     margin-left: auto;
