--- a/style.css
+++ b/style.css
@@ -1,18 +1,15 @@
 
-* {
-  box-sizing: border-box;
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 
 body {
   margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-}
+  font-family: Verdana, Arial, Helvetica, sans-serif;
+  font-size: 14;}
 
-/*
-P { text-align: center }
-H2 { text-align: center }
-*/
+
+P { font-size: 5vw }
+H2 { font-family:Georgia, serif;
+    font-size: 10vw }
 
 IMG {
     display: block;
