--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 body {
   margin: 0;
   font-family: Verdana, Arial, Helvetica, sans-serif;
-  font-size: 1vw;}
+  font-size: 14;}
 
 
-P { font-size: 1vw }
+P { font-size: 14 }
 H2 { font-family:Georgia, serif;
-    font-size: 2vw }
+    font-size: 16}
 
 IMG {
     display: block;
